[package]
name = "net-utils"
version = "0.0.1"
authors = ["Rohit Joshi <rohit.joshi@gmail.com>"]


[features]
ssl = ["openssl"]

[dependencies]
#openssl = "*"
time = "*"
log  = "*"

[dev-dependencies]
env_logger = "0.3"

[dependencies.openssl]
optional = true
#git = "https://github.com/sfackler/rust-openssl.git"

#[dependencies.time]
#git = "https://github.com/rust-lang/time.git"

#[dependencies]
#log = "0.1.3"
#git = "https://github.com/rust-lang/log.git"
