[package]
name = "net-utils"
version = "0.0.4"
authors = ["Rohit Joshi <rohit.joshi@gmail.com>"]
description = "Network utility library which provides client connection pool for TCP/SSL connctions"
repository = "https://github.com/rohitjoshi/net-utils"
readme = "README.md"
keywords = ["connection-pool", "TCP", "SSL"]
license = "MIT OR Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[features]
ssl = ["openssl"]


[dependencies]
time = "0.1.34"
log  = "0.3.4"
uuid = "0.1.18"

[dev-dependencies]
env_logger = "0.3"

[dependencies.openssl]
optional = true
version= "0.9.22"


